--- a/games202/0/index.html
+++ b/games202/0/index.html
@@ -18,11 +18,11 @@
             height: 100%;
         }
     </style>
-    <script src="lib/three.js" defer></script>
-    <script src="lib/OrbitControls.js" defer></script>
-    <script type="text/javascript" src="lib/MTLLoader.js" defer></script>
-    <script type="text/javascript" src="lib/OBJLoader.js" defer></script>
-    <script type="text/javascript" src="lib/dat.gui.js" defer></script>
+    <script src="../jslib/three.js" defer></script>
+    <script src="../jslib/OrbitControls.js" defer></script>
+    <script type="text/javascript" src="../jslib/MTLLoader.js" defer></script>
+    <script type="text/javascript" src="../jslib/OBJLoader.js" defer></script>
+    <script type="text/javascript" src="../jslib/dat.gui.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
         integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
         crossorigin="anonymous" defer> </script>
