--- a/games202/2/index.html
+++ b/games202/2/index.html
@@ -18,16 +18,16 @@
             height: 100%;
         }
     </style>
-    <script src="lib/sh.js" defer></script>
-    <script src="lib/three.js" defer></script>
-    <script src="lib/bvhtree.js" defer></script>
-    <script src="lib/OrbitControls.js" defer></script>
-    <script src="lib/gl-matrix-min.js" defer></script>
-    <script src="lib/RGBELoader.js" defer></script>
-    <script src="lib/math.js" defer></script>
-    <script type="text/javascript" src="lib/MTLLoader.js" defer></script>
-    <script type="text/javascript" src="lib/OBJLoader.js" defer></script>
-    <script type="text/javascript" src="lib/dat.gui.js" defer></script>
+    <script src="../jslib/sh.js" defer></script>
+    <script src="../jslib/three.js" defer></script>
+    <script src="../jslib/bvhtree.js" defer></script>
+    <script src="../jslib/OrbitControls.js" defer></script>
+    <script src="../jslib/gl-matrix-min.js" defer></script>
+    <script src="../jslib/RGBELoader.js" defer></script>
+    <script src="../jslib/math.js" defer></script>
+    <script type="text/javascript" src="../jslib/MTLLoader.js" defer></script>
+    <script type="text/javascript" src="../jslib/OBJLoader.js" defer></script>
+    <script type="text/javascript" src="../jslib/dat.gui.js" defer></script>
 
     <script src="src/utils/tools.js" defer></script>
 
