--- a/games202/1/index.html
+++ b/games202/1/index.html
@@ -18,12 +18,12 @@
             height: 100%;
         }
     </style>
-    <script src="lib/three.js" defer></script>
-    <script src="lib/OrbitControls.js" defer></script>
-    <script src="lib/gl-matrix-min.js" defer></script>
-    <script type="text/javascript" src="lib/MTLLoader.js" defer></script>
-    <script type="text/javascript" src="lib/OBJLoader.js" defer></script>
-    <script type="text/javascript" src="lib/dat.gui.js" defer></script>
+    <script src="../jslib/three.js" defer></script>
+    <script src="../jslib/OrbitControls.js" defer></script>
+    <script src="../jslib/gl-matrix-min.js" defer></script>
+    <script type="text/javascript" src="../jslib/MTLLoader.js" defer></script>
+    <script type="text/javascript" src="../jslib/OBJLoader.js" defer></script>
+    <script type="text/javascript" src="../jslib/dat.gui.js" defer></script>
 
     <script src="src/shaders/Shader.js" defer></script>
     <script src="src/shaders/InternalShader.js" defer></script>
